# GLFW_Game

./: .gitignore  CMakeLists.txt  README.md
glfw/deps_generated/: glad.c
glfw/deps_generated/glad/: glad.h
libs/: CMakeLists.txt
libs/cJSON/: cJSON_Wrapper.hpp
res/: settings.json
res/data/: LochPython.tiled-session
res/data/maps/: testisland copy 2.tmx  testisland copy.tmx  testisland.tmx  testmap.tmx
res/data/scripts/: config.json  main.bat  main.py
res/data/scripts/chunking/: chunk.py  processor.py
res/data/scripts/common/: config.py  rect.py
res/data/scripts/map/: data.py  elevationdata.py  loader.py  mapdata.py  parser.py  tileset.py  validation.py
res/data/scripts/saving/: saver_world.py
res/data/scripts/trash/: gcommon.py  loader.py  visualization.py
res/data/scripts/visualization/: visualization.py
res/data/tilesets/: details.tsx  floor.tsx  objects.tsx  objects_1x2.tsx  objects_2x2.tsx  particles.tsx  player.tsx
res/data/tilesets/workspace/: details.cpt  gworld_palet.xml  objects.cpt  objects_1x2.cpt  objects_2x2.cpt  particles.cpt  player.cpt
src/: CMakeLists.txt  main.cpp  main.h  scratchpad.txt
src/component/: AnimationComponent.cpp  AnimationComponent.h  CMakeLists.txt  CollisionComponents.cpp  CollisionComponents.h  CollisionResult.cpp  CollisionResult.h  Component.h  ControllableComponent.cpp  ControllableComponent.h  FoodComponent.cpp  FoodComponent.h  GraphicsComponent.cpp  GraphicsComponent.h  LocationComponent.cpp  LocationComponent.h  MovementComponent.cpp  MovementComponent.h  SpriteComponent.h  TransformComponent.cpp  TransformComponent.h
src/core/: CMakeLists.txt  Callbacks.h  Core.cpp  Core.h  Errors.cpp  Errors.h  Graphics.h  Settings.cpp  Settings.h  Timers.cpp  Timers.h  Window.cpp  Window.h
src/entity/: CMakeLists.txt  EntitiesList.cpp  EntitiesList.h  Entity.cpp  Entity.h  EntityContainers.cpp  EntityContainers.h  EntityGlobalId.h  EntityRegister.h  EntityTemplate.h  Player.cpp  Player.h
src/game/: CMakeLists.txt  Camera.cpp  Camera.h  Game.cpp  Game.h  GameBase.cpp  GameBase.h
src/loader/: CMakeLists.txt  ChunksLoader.cpp  ChunksLoader.h  ImageData.h  ImageLoader.cpp  ImageLoader.h  ImagesManager.cpp  ImagesManager.h  Loader.cpp  Loader.h  LoaderBase.cpp  LoaderBase.h  LoaderDatatypes.cpp  LoaderDatatypes.h  TextureData.h  TextureId.h  TileId.h  TilesetData.h  TilesetRange.h  TilesetsLoader.cpp
src/maths/: CMakeLists.txt  Maths.cpp  Maths.h
src/system/: CMakeLists.txt  CollisionsSystem.cpp  CollisionsSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h  RenderSystemBase.cpp  RenderSystemBase.h  SystemBase.cpp  SystemBase.h  TransformSystem.cpp  TransformSystem.h  UserInputSystem.cpp  UserInputSystem.h
src/utils/: CMakeLists.txt  CustomContainers.h  GLCommon.h  IO.cpp  IO.h  IOPath.cpp  IOPath.h  Maths.cpp  Maths.h
src/world/: CMakeLists.txt  Coordinates.cpp  Coordinates.h  Elevation.cpp  Elevation.h  Floor.h  Layer.h  World.cpp  World.h
test/: CMakeLists.txt  CoordinatesTest.cpp  CoordinatesTest.h  MathsTest.cpp
